# templix

./: Cargo.toml  README.md  default.nix  flake.nix
src/: main.rs
templates/lean4/: Main.lean  flake.nix  lake-manifest.json  lakefile.lean
templates/rust/: Cargo.toml  flake.nix
templates/rust/src/: main.rs
templates/zig/: build.zig  build.zig.zon  flake.nix
templates/zig/src/: main.zig
